# python-module-template

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
docs/en/: INSTRUCTIONS.md
docs/es/: INSTRUCTIONS.md
module_name/: __init__.py  main.py
src/module_name/: __init__.py
tests/: test_main.py
